--- a/new-properties.html
+++ b/new-properties.html
@@ -74,22 +74,24 @@
 
           <!-- Wrapper for slides -->
           <div class="carousel-inner" role="listbox">
-          
+
             <div class="item active">
-              <img src="..." alt="...">
+              <img src="images/new-1.jpg" alt="304 Olsen Rd.">
               <div class="carousel-caption">
-                ...
+                <h3>304 Olsen Rd</h3>
+                <p>Loren Ipsum yada yada</p>
               </div>
             </div>
 
             <div class="item">
-              <img src="..." alt="...">
+              <img src="images/new-2.jpg" alt="9872 Fremont Dr.">
               <div class="carousel-caption">
-                ...
+                <h3>9872 Fremont Dr.</h3>
+                <p>Loren Ipsum yada yada</p>
               </div>
             </div>
-            ...
-          </div>
+            
+          </div><!--Carosel wrapper for slides end -->
 
           <!-- Controls -->
           <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
